<resources>
    <string name="app_name">SNIIV</string>
    <string name="action_settings">Settings</string>
    <string name="title_financiamiento">Financiamientos</string>
    <string name="title_subsidios">Subsidios</string>
    <string name="title_oferta_vivienda">Oferta de Vivienda</string>
    <string name="title_acciones">Acciones: </string>
    <string name="title_monto">Monto: </string>
    <string name="title_vigentes">Vigentes: </string>
    <string name="title_registradas">Registradas: </string>

    <string name="title_50">En proceso hasta 50%: </string>
    <string name="title_99">En proceso hasta 99%: </string>
    <string name="title_recientes">Terminadas Recientes: </string>
    <string name="title_antiguas">Terminadas Antiguas: </string>
    <string name="title_total">Total: </string>

    <string name="title_u1">U1: </string>
    <string name="title_u2">U2: </string>
    <string name="title_u3">U3: </string>
    <string name="title_fc">FC: </string>
    <string name="title_nd">ND: </string>


    <string name="title_horizontal">Horizontal: </string>
    <string name="title_vertical">Vertical: </string>

    <string name="title_economica">Económica: </string>
    <string name="title_popular">Popular: </string>
    <string name="title_tradicional">Tradicional: </string>
    <string name="title_media_residencial">Media Residencial: </string>



    <string name="mensaje_espera">Espere por favor</string>
    <string name="no_conectado">No hay conexión a internet</string>
    <string name="title_avance_obra">Avance Obra</string>
    <string name="title_pcu">PCU</string>
    <string name="title_tipo_vivienda">Tipo Vivienda</string>
    <string name="title_valor_vivienda">Valor Vivienda</string>
    <string name="title_activity_oferta">Oferta</string>
    <string name="mensaje_error">Ha ocurrido un error</string>
    <string name="empty_value">-</string>
    <string name="mensaje_error_datos">Señal débil, vuelva a intentar</string>
    <string name="title_oferta">Oferta</string>
    <string name="title_reporte_general">Reporte General</string>
    <string name="title_demanda">Demanda</string>
    <string name="unidades_miles">(Miles)</string>
    <string name="unidades_mdp">(MDP)</string>
    <string name="unidades_acciones">Acciones (miles):</string>
    <string name="unidades_monto">Monto (mdp):</string>

    <string name="title_evolucion">Evolución Mensual</string>
    <string name="title_demanda_municipal">Reporte Municipal</string>

    <string name="title_grafica">Gráfica</string>
    <string name="mensaje_imagen_guardada">Imagen Guardada en Galería</string>
    <string name="etiqueta_guardar">Guardar</string>
    <string name="etiqueta_conavi">Fuente: CONAVI</string>
    <string name="texto_cancelar">Cerrar</string>
    <string name="title_guardar">Guardar</string>
    <string name="etiqueta_porcentaje">Porcentaje</string>
    <string name="title_datos">Datos</string>
    <string name="selected_configuration">standard</string>
    <string name="etiqueta_monto">Montos</string>
    <string name="mensaje_datos_no_disponibles">Datos no disponibles</string>
    <string name="title_registro_vivienda">Registro de Vivienda</string>
    <string name="etiqueta_tipo">tipo</string>
    <string name="title_menu_montos">MONTOS</string>
    <string name="title_menu_acciones">ACCIONES</string>
    <string name="title_inventario_oferta">Inventario de Oferta de Vivienda Vigente</string>
    <string name="title_otorgados">%1$s Otorgados %2$s</string>
</resources>
