<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:id="@+id/Relative">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_avance_obra"
        android:id="@+id/txtTitleAvanceObra"
        android:textColor="#ffffffff"
        android:background="#ff00803b"
        android:textSize="20dp"
        android:width="250dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_50"
        android:id="@+id/txtProceso50"
        android:layout_below="@+id/txtTitleAvanceObra"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_99"
        android:id="@+id/txtProceso99"
        android:layout_below="@+id/txtProceso50"
        android:layout_alignLeft="@+id/txtProceso50"
        android:layout_alignStart="@+id/txtProceso50"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_recientes"
        android:id="@+id/txtRecientes"
        android:layout_below="@+id/txtProceso99"
        android:layout_alignLeft="@+id/txtProceso99"
        android:layout_alignStart="@+id/txtProceso99"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_antiguas"
        android:id="@+id/txtAntiguas"
        android:layout_below="@+id/txtRecientes"
        android:layout_alignLeft="@+id/txtRecientes"
        android:layout_alignStart="@+id/txtRecientes"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_total"
        android:id="@+id/txtTotal"
        android:layout_below="@+id/txtAntiguas"
        android:layout_alignLeft="@+id/txtAntiguas"
        android:layout_alignStart="@+id/txtAntiguas"
        android:layout_marginTop="5dp"/>


</RelativeLayout>