<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:id="@+id/Relative">


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_financiamiento"
        android:id="@+id/txtTitleFinan"
        android:textColor="#ffffffff"
        android:background="#ff00803b"
        android:textSize="20dp"
        android:layout_below="@+id/spinner"
        android:layout_toRightOf="@+id/txtRegistradas"
        android:layout_toEndOf="@+id/txtRegistradas"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_acciones"
        android:id="@+id/txtAcciones1"
        android:layout_below="@+id/txtTitleFinan"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_monto"
        android:id="@+id/txtMonto1"
        android:layout_below="@+id/txtAcciones1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_subsidios"
        android:id="@+id/txtTitleSubsidios"
        android:textColor="#ffffffff"
        android:background="#ff00803b"
        android:textSize="20dp"
        android:layout_below="@+id/txtMonto1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_acciones"
        android:id="@+id/txtAcciones2"
        android:layout_below="@+id/txtTitleSubsidios"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_monto"
        android:id="@+id/txtMonto2"
        android:layout_below="@+id/txtAcciones2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_oferta_vivienda"
        android:id="@+id/textView3"
        android:textColor="#ffffffff"
        android:background="#ff00803b"
        android:textSize="20dp"
        android:layout_below="@+id/txtMonto2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_registradas"
        android:id="@+id/txtRegistradas"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_vigentes"
        android:id="@+id/txtVigentes"
        android:layout_below="@+id/txtRegistradas"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"/>


</RelativeLayout>