<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_valor_vivienda"
        android:id="@+id/txtTitleValorVivienda"
        android:layout_marginTop="20dp"
        style="@style/Title" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitleValorVivienda"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <TextView
                android:id="@+id/txtRow1"
                android:text="@string/title_economica"
                android:layout_weight="1"
                style="@style/Etiqueta" />

            <TextView
                android:id="@+id/txtEconomica"
                android:layout_weight="1"
                style="@style/EtiquetaCantidad" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <TextView
                android:id="@+id/txtRow2"
                android:text="@string/title_popular"
                android:layout_weight="1"
                style="@style/Etiqueta" />

            <TextView
                android:id="@+id/txtPopular"
                android:layout_weight="1"
                style="@style/EtiquetaCantidad" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <TextView
                android:id="@+id/txtRow3"
                android:text="@string/title_tradicional"
                android:layout_weight="1"
                style="@style/Etiqueta" />

            <TextView
                android:id="@+id/txtTradicional"
                android:layout_weight="1"
                style="@style/EtiquetaCantidad" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <TextView
                android:id="@+id/txtRow4"
                android:text="@string/title_media_residencial"
                android:layout_weight="1"
                style="@style/Etiqueta" />

            <TextView
                android:id="@+id/txtMedia"
                android:layout_weight="1"
                style="@style/EtiquetaCantidad" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <TextView
                android:id="@+id/txtRow5"
                android:text="Total"
                android:layout_weight="1"
                style="@style/Etiqueta" />

            <TextView
                android:id="@+id/txtTotal"
                android:layout_weight="1"
                style="@style/EtiquetaCantidad" />
        </TableRow>
    </TableLayout>

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pckEstados"
        android:layout_alignParentBottom="true"
        android:descendantFocusability="blocksDescendants"
        android:layout_centerHorizontal="true" />


</RelativeLayout>