<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_subsidios"
        android:id="@+id/txtTitleSubsidios"
        android:layout_marginTop="20dp"
        style="@style/Title"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitleSubsidios"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text=""
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:text="Acciones"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/Etiqueta"
                android:textSize="15sp" />

            <TextView
                android:text="Montos"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text=""
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:text="@string/unidades_miles"
                android:layout_marginTop="-5dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="right"
                style="@style/Etiqueta"
                android:textSize="12sp" />

            <TextView
                android:text="@string/unidades_mdp"
                android:layout_marginTop="-5dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <TextView
                android:id="@+id/txtRow1"
                android:text="Nueva:"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/Etiqueta"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtNuevaAcc"
                android:text="-"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtNuevaMto"
                android:text="-"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="13sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <TextView
                android:id="@+id/txtRow2"
                android:text="Usada:"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/Etiqueta"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtUsadaAcc"
                android:text="-"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtUsadaMto"
                android:text="-"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="13sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <TextView
                android:id="@+id/txtRow3"
                android:text="Autoproducción:"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/Etiqueta"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtAutoproduccionAcc"
                android:text="-"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtAutoproduccionMto"
                android:text="-"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="13sp" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <TextView
                android:id="@+id/txtRow4"
                android:text="Mejoramiento:"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/Etiqueta"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtMejoramientoAcc"
                android:text="-"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtMejoramientoMto"
                android:text="-"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="13sp" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <TextView
                android:id="@+id/txtRow5"
                android:text="Lotes c/ Servicio"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/Etiqueta"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtLotesAcc"
                android:text="-"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtLotesMto"
                android:text="-"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="13sp" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <TextView
                android:id="@+id/txtRow6"
                android:text="Otros:"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/Etiqueta"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtOtrosAcc"
                android:text="-"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="13sp" />


            <TextView
                android:id="@+id/txtOtrosMto"
                android:text="-"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="13sp" />
        </TableRow>



        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <TextView
                android:id="@+id/txtRow7"
                android:text="Total"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/Etiqueta"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtTotalAcc"
                android:text="-"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtTotalMto"
                android:text="-"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="right"
                style="@style/EtiquetaCantidad"
                android:textSize="13sp" />
        </TableRow>
    </TableLayout>

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pckEstados"
        android:layout_alignParentBottom="true"
        android:descendantFocusability="blocksDescendants"
        android:layout_centerHorizontal="true" />


</RelativeLayout>